tests/errors/err_ref_mut_immutable.mix
// ERROR: cannot take mutable ref through immutable 'x'
main()
    x = 1
    y = ref! x
